Fix bug where page jumps to top when mobile nav dropdown is opened

--- a/assets/scss/components/_main-menu-mobile.scss
+++ b/assets/scss/components/_main-menu-mobile.scss
@@ -188,6 +188,6 @@ $button-width: 35px;
   }
 }
 .lock-scroll {
+  height: 100%;
   overflow: hidden;
-  position: fixed;
 }
